# stickystudy

./: .gitignore  LICENSE  TODO.txt  pyproject.toml  ruff.toml
data/: kanji_list.tsv  kanji_list_current.tsv
scripts/: kanji_flashcards.py  kanjidic_tsv_to_json.py  kanjidic_xml_to_tsv.py  stickystudy.py  sync_all.sh
stickystudy/: __init__.py  deck.py  main.py  utils.py
stickystudy/data/: kanji_list.tsv  kanji_list_current.tsv  sh_kk.tsv
